# zzzz

./: .gitignore
src/: zzzz.h
zzzz-cmake/: CMakeLists.txt  README.md
zzzz-cmake/resources/: porter robinson - sea of voices (kojo edit) [581239080].opus
zzzz-cmake/src/: main.cpp  zzzz.h
zzzz-cmake/src/audio/: audio.cpp  simpleaudio.cpp  simpleaudio.h
zzzz-cmake/src/gui/: gui.cpp  gui.h  linux.h  linux_window.cpp  windows.h  windows_window.cpp
zzzz-meson/: meson.build  meson.options
zzzz-meson/src/: gui.cpp  gui.h  simpleaudio.cpp  zzzz.cpp
zzzz-rs/: Cargo.toml  build.rs
zzzz-rs/src/: aud.rs  main.rs
zzzz-rs/src/gui/: support.rs
zzzz-rs/src/v1/: gui.rs  shared.rs
zzzz-rs/src/v1/gui/: support.rs
